--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
    <com.example.jack.radarview.RadarView
        android:id="@+id/radarView"
@@ -13,4 +14,10 @@
        app:broad_color="@color/colorPrimary"
        android:background="@color/colorAccent" />
 
-</android.support.constraint.ConstraintLayout>
+   <!--<com.github.mikephil.charting.charts.RadarChart-->
+       <!--android:id="@+id/chart1"-->
+       <!--android:layout_width="match_parent"-->
+       <!--android:layout_height="match_parent" />-->
+
+
+</LinearLayout>
