--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
    <!--<com.github.mikephil.charting.charts.RadarChart-->
        <!--android:id="@+id/chart1"-->
        <!--android:layout_width="match_parent"-->
-       <!--android:layout_height="match_parent" />-->
-
+       <!--android:layout_height="300dp" />-->
 
 </LinearLayout>
