--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
 
-   <!--<com.github.mikephil.charting.charts.RadarChart-->
-       <!--android:id="@+id/chart1"-->
-       <!--android:layout_width="match_parent"-->
-       <!--android:layout_height="300dp" />-->
+   <com.github.mikephil.charting.charts.RadarChart
+       android:id="@+id/chart1"
+       android:layout_width="match_parent"
+       android:layout_height="300dp" />
 
    <com.example.jack.radarview.RadarView2
        android:id="@+id/chart2"
