--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,6 +10,8 @@
         <attr name="corner_hold_color" format="color"></attr>
         <attr name="circle_hold_color" format="color"></attr>
         <attr name="broad_color_text" format="color"></attr>
+        <attr name="interval_text_size" format="dimension"></attr>
+        <attr name="interval_text_color" format="color"></attr>
     </declare-styleable>
 
 </resources>
