--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,16 @@
    <com.example.jack.radarview.RadarView
        android:id="@+id/radarView"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"/>
+       android:layout_height="wrap_content"
+       app:broad_text_size="15sp"
+       app:interval_text_size="9sp"
+       app:circle_hold_textSize="12sp"
+       app:broad_color="#20B2AA"
+       app:broad_color_text="#2F4F4F"
+       app:circle_hold_color="#BC8F8F"
+       app:corner_hold_color="#1E90FF"
+       app:interval_text_color="#696969"
+       app:mark_broad_color="#32CD32"
+       app:mark_color="#7CFC00"/>
 
 </LinearLayout>
